# Cloud-based-POS-system

./: .gitignore  README.md  TAURI_SETUP.md  _middleware.disabled.ts  next.config.ts  package-lock.json  package.json
app/: globals.css  init-local-db.tsx  layout.tsx
app/auth/error/: page.tsx
app/auth/login/: page.tsx
app/auth/sign-up/: page.tsx
app/auth/sign-up-success/: page.tsx
app/dashboard/: DashboardGuard.tsx  layout.tsx  page.tsx
app/dashboard/categories/: page.tsx
app/dashboard/customers/: page.tsx
app/dashboard/debts/: page.tsx
app/dashboard/permissions/: page.tsx
components/: add-category-dialog.tsx  add-customer-dialog.tsx  add-permission-dialog.tsx  add-staff-dialog.tsx  categories-table.tsx  customers-table.tsx  dashboard-nav.tsx  debts-table.tsx  edit-category-dialog.tsx  edit-permission-dialog.tsx  edit-staff-dialog.tsx  pay-debt-dialog.tsx  permissions-table.tsx  pos-interface.tsx  pos-loader.tsx  product-form.tsx  products-table.tsx  receipt.tsx  staff-table.tsx  sync-button.tsx
components/ui/: dialog.tsx  toaster.tsx
hooks/: use-tauri-data.ts  use-toast.ts
lib/: auth-gate.ts  client.ts  commands.ts  local-db.ts  local-queries.ts  local-schema.ts  offline-auth.ts  offline-ops.ts  offline-products.ts  server.ts  sync.ts  utils.ts
scripts/: 001_create_tables.sql  002_create_functions.sql  003_seed_data.sql  004_update_product_policies.sql  005_fix_profile_policies.sql  006_create_rbac_system.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: commands.rs  main.rs  sync.rs
(+7 files in other folders)
